# custom-notify

./: .gitignore  README.md  flake.nix  index.html  package.json
.github/workflows/: release.yml
src/: base.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  http_server.rs  lib.rs  main.rs  notification.rs  settings.rs  tray.rs
src/notification/: NotificationView.tsx  notification.css
src/settings/: SettingsView.tsx  settings.css
